--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -40,11 +40,9 @@
              <a class="navbar-brand" href="#">Tec Group</a>
              <div class="collapse navbar-collapse justify-content-end text-white font-weight-bold">
                 <ul class="navbar-nav">
-                   <li class="nav-item active">
-                     <a class="nav-link" href="#">Iniciar Sesion</a>
+                   <li class="nav-item active"><a class="nav-link" th:href="@{#}">Iniciar Sesion</a>
                    </li>
-                   <li class="nav-item active">
-                     <a class="nav-link" href="#">Registrarse</a>
+                   <li class="nav-item active"><a class="nav-link" th:href="@{/login/registro}">Registrarse</a>
                    </li>
                 </ul>
              </div>
