--- a/src/main/resources/templates/iniciarSesion.html
+++ b/src/main/resources/templates/iniciarSesion.html
@@ -40,19 +40,29 @@
 
 <body>
   <br><br><br>
-
+<div th:replace="fragments/header4 :: header"></div>
+	<br>
+	<br>
+	<br>
+	<div class="row">
+          <div class="col"></div>
+          <div class="col">
+            <img class ="img-fluid" th:src="@{/img/Work2Gether.png}" alt="Logo de Work2gether">
+          </div>
+          <div class="col"></div>
+        </div>
   <form action="#" class="row justify-content-center border-0 shadow-none">
 
     <div class="col-md-2 bg-warning pt-4 rounded">
       
       <div class="bg-white text-black font-weight-bold rounded pt-3 text-center">
-        <p class="pb-3">Nombre de usuario</p> 
+        <p class="pb-3">Correo del usuario</p> 
       </div>
     </div>
 <div class="col-md-1"></div>
     <div class="col-md-3 bg-warning pt-3 rounded">
       <div class="bg-white text-black font-weight-bold rounded pt-2 text-center">
-        <input type="text" placeholder="Nombre de Usuario..." class="form-control" name="uname" required> 
+        <input type="text" placeholder="Correo del usuario..." class="form-control" name="uname" required> 
       </div>
     </div>
 
@@ -62,7 +72,7 @@
   
 
   
-<form th:action="@{}" th:object="${}" class="row justify-content-center border-0 shadow-none">
+<form th:action="@{/empleado/iniciarSesion}" th:object="${empleado}" class="row justify-content-center border-0 shadow-none">
 
   <div class="col-md-2 bg-warning pt-4 rounded">
     
@@ -77,7 +87,7 @@
     </div>
   </div>
 
- </form>
+
 
 <br>
     <div class="col-md-12 p-4">
@@ -87,7 +97,7 @@
       </div>
 
     </div>
-    
+     </form>
 
         <br>
         <br>
