--- a/src/main/resources/templates/Mensajeria_Jefe.html
+++ b/src/main/resources/templates/Mensajeria_Jefe.html
@@ -71,7 +71,7 @@
                       </div>
                       <div class="col"></div>
                       </div> 
-                          <a type="button" th:href="@{/mensaje/Enviar}"class="align-content-end btn btn-primary">Crear Mensaje</a>         
+                          <a type="button" th:href="@{/mensaje/Enviar_Jefe}"class="align-content-end btn btn-primary">Crear Mensaje</a>         
                   </div>
               </div>
             <div class="col-2"></div>
